# mcp-quickstart-resources

./: .gitignore
weather-agent/: mcp.json  pyproject.toml
weather-agent/src/weather_agent/: __init__.py  agent.py  cli.py
